checking code on prod

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>web devlopment course</h1>
+    <h1>web devlopment course working fine</h1>
 </body>
 </html>
