--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>web devlopment course change in demo branch </h1>
+    <h1>web development course for anshu prabhu ji</h1>
 </body>
 </html>
