--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web development</title>
 </head>
+
 <body>
     <h1>web development course for anshu</h1>
     <h4>plese take pull from master branch </h4>
@@ -28,8 +30,10 @@
     <section class="about_us">
         <h4>about us</h4>
         <p>Lorem ipsum dolor sit amet consectetur <span> adipisicing </span> elit. Quo <strong>nihil</strong> inventore
-            <em>delectus</em> sapiente tenetur quas. <a href="https://iskconnoida.org/">iskcon</a> Perferendis quaerat
-            laboriosam aut quasi illo illum, porro at adipisci error veritatis quis culpa vel minus blanditiis!</p>
+            <em>delectus</em> sapiente tenetur quas. <a href="https://www.youtube.com/@VardaanClasses">iskcon</a>
+            Perferendis quaerat
+            laboriosam aut quasi illo illum, porro at adipisci error veritatis quis culpa vel minus blanditiis!
+        </p>
         <h4>imgage</h4>
 
         <a href="#">more photos</a>
@@ -53,11 +57,11 @@
     <input type="submit">
     <button>submit</button>
 
-<h4>write somthing about you</h4>
+    <h4>write somthing about you</h4>
     <ul>
-<li>point 1</li>
-<li>point 2</li>
-<li>point 3</li>
+        <li>point 1</li>
+        <li>point 2</li>
+        <li>point 3</li>
     </ul>
 
     <ol>
@@ -68,22 +72,22 @@
         <li>point 3</li>
         <li>point 3</li>
 
-            </ol>
+    </ol>
 
 
 
 
-            <a href="">inline</a>
-            <a href="">inline</a>
-            <p>
-                block
-            </p>
-            <p>block</p>
-            <strong>inline</strong>
-            <span>inline</span>
-          
+    <a href="">inline</a>
+    <a href="">inline</a>
+    <p>
+        block
+    </p>
+    <p>block</p>
+    <strong>inline</strong>
+    <span>inline</span>
 
-            
+
+
     <!-- <span></span>
     <strong></strong>
     <sub></sub>
@@ -107,4 +111,5 @@
 
 
 </body>
+
 </html>
