--- a/index.html
+++ b/index.html
@@ -5,15 +5,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>Web development</title>
+<!-- 
+    <style>
+
+body{
+    background-color: #fff;
+}
+
+    </style> -->
 </head>
 
 <body>
+    <div>
     <h1>web development course for anshu</h1>
+    <h4 class="link">plese take pull from master branch </h4>
+    <h4 class="link">red color </h4>
     <h4>plese take pull from master branch </h4>
-
+</div>
     <h2>hello world</h2>
-    <div class="link">
+    <div class="link" id="links">
+        <h4 class="abc">style h4 tag</h4>
         <div>
             difv
             <div>
@@ -22,13 +35,10 @@
         </div>
         <a href="">home</a>
         <a href="">about us</a>
-        <a href="">call</a>
-        <a href="">contect</a>
-        <a href="">login</a>
     </div>
     <a href="">color black</a>
     <section class="about_us">
-        <h4>about us</h4>
+        <h4 style="font-size: 19px;color:red;background-color: orange;">about us</h4>
         <p>Lorem ipsum dolor sit amet consectetur <span> adipisicing </span> elit. Quo <strong>nihil</strong> inventore
             <em>delectus</em> sapiente tenetur quas. <a href="https://www.youtube.com/@VardaanClasses">iskcon</a>
             Perferendis quaerat
