--- a/Index_1.html
+++ b/Index_1.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>HTML Elements Example</title>
+  <link rel="stylesheet" href="./assets/css/style.css">
+  <title>Some Scientific Formula</title>
   <style>
     /* Adding some basic styling for demonstration purposes */
     body {
@@ -21,14 +22,14 @@
 <body>
 
   <!-- Subscript Example -->
-  <p>This is a <sub>subscript</sub> text.</p>
+  <p>This is a <sub>CH3COOH</sub> Acetic acid</p>
 
   <!-- Superscript Example -->
-  <p>This is a <sup>superscript</sup> text.</p>
+  <p>This is a <sup>KAl(SO 4)2·12H2O</sup>Potash alum</p>
 
   <!-- Division Example -->
   <div class="example-div">
-    <p>This is a division (div) element.</p>
+    <p>Gajjab Science</p>
   </div>
 
   <!-- Ordered List Example -->
