--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Book Store</title>
+    <title>Vardan Classes</title>
 </head>
 
 <body>
@@ -33,8 +33,10 @@
                     <a href="#">Our Service</a>
                     <a href="#">Contact us</a>
                 </div>
+                <button>Sign in</button>
             </div>
         </div>
+        
     </header>
 </body>
 
