--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
         </div>
         
     </header>
+
+
+    <a target="_blank" href="https://uidevelopment.netlify.app/">live link</a>
 </body>
 
 </html>
