--- a/index.html
+++ b/index.html
@@ -39,11 +39,12 @@
                
             </div>
         </div>
-        
     </header>
-
-
-    <a target="_blank" href="https://uidevelopment.netlify.app/">live link</a>
+<div>
+    <h1>The smart choice</h1>
+    <h1>for your Future</h1>
+</div>
+    <!-- <a target="_blank" href="https://uidevelopment.netlify.app/">live link</a> -->
 </body>
 
 </html>
