--- a/index.html
+++ b/index.html
@@ -67,9 +67,24 @@
             </div>
         </div>
     </div>
-
-
 </div>
+<div class="2nd banner">
+    <div class="container">
+        <div class="flex">
+            <div class="left_text">
+                <h2>Premium<span>Learning</span></h2>
+                <h2><span>Experience</span></h2>
+            </div>
+            </div>
+            <div class="leftimage">
+                <figure>
+                    <img src="./assets/img/OBJECTS.jpg" alt="">
+                </figure>
+            </div>
+        </div>
+    </div>
+</div>
+
 
 
     <!-- <a target="_blank" href="https://uidevelopment.netlify.app/">live link</a> -->
