--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
                 <h2>Premium<span>Learning</span></h2>
                 <h2><span>Experience</span></h2>
             </div>
-            </div>
             <div class="leftimage">
                 <figure>
-                    <img src="./assets/img/OBJECTS.jpg" alt="">
+                    <img src="./assets/img/N_Object.png" alt="">
                 </figure>
+            </div>
             </div>
         </div>
     </div>
