--- a/index.html
+++ b/index.html
@@ -67,27 +67,47 @@
             </div>
         </div>
     </div>
-</div>
-<div class="2nd banner">
-    <div class="container">
-        <div class="flex">
-            <div class="left_text">
-                <h2>Premium<span>Learning</span></h2>
-                <h2><span>Experience</span></h2>
-            </div>
-            <div class="leftimage">
-                <figure>
-                    <img src="./assets/img/N_Object.png" alt="">
-                </figure>
-            </div>
+
+
+    <div class="banner_2">
+        <div class="container">
+            <div class="flex">
+                <div class="leftimage">
+                    <figure>
+                        <img src="./assets/img/N_Object.png" alt="">
+                    </figure>
+                </div>
+                <div class="left_text">
+                    <h2>Premium<span>Learning</span> Experience</h2>
+                    <div class="accessible_wapper">
+                        <div class="point">
+                            <figure>
+                                <img src="./assets/img/Easilyimg.png" alt="">
+                            </figure>
+                            <div class="accessible_text">
+                                <h4>Easily Accessible</h4>
+                                <p class="pr-0">Learning Will fell Very Comfortable With Courslab.</p>
+                            </div>
+                        </div>
+                        <div class="point">
+                            <figure>
+                                <img src="./assets/img/Easilyimg.png" alt="">
+                            </figure>
+                            <div class="accessible_text">
+                                <h4>Easily Accessible</h4>
+                                <p class="pr-0">Learning Will fell Very Comfortable With Courslab.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                </div>
             </div>
         </div>
-    </div>
-</div>
-
+     
 
 
     <!-- <a target="_blank" href="https://uidevelopment.netlify.app/">live link</a> -->
+</div>
 </body>
 
 </html>
