--- a/index.html
+++ b/index.html
@@ -103,6 +103,10 @@
                 </div>
             </div>
         </div>
+        <div class="Another text">
+<h2>What students Says</h2>
+<p>Lorem Ipsum is simply dummy text of the printing.</p>
+        </div>
      
 
 
