Hare Krishna some changes

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 </div>
             </div>
         </div>
-        <div class="Another text">
+        <div class="Another_text">
 <h2>What students Says</h2>
 <p>Lorem Ipsum is simply dummy text of the printing.</p>
         </div>
@@ -121,12 +121,17 @@
         <path d="M29.3791 51.8476L0.0315758 46.1685L0 4.96191L29.3475 10.6456L29.3791 51.8476Z" fill="#472758"/>
         <path d="M58.7946 34.0297C58.7946 41.3192 53.0748 47.1968 45.9973 48.5772L29.3478 51.8159L29.3433 10.65L44.8606 7.63224C51.7667 6.28801 57.3782 9.84256 57.3782 16.9607C57.3782 20.3709 56.0745 23.33 53.9274 25.6891C56.8684 27.0514 58.79 29.8527 58.7946 34.0297ZM38.4055 17.7095V24.999L44.8606 23.7405C46.8995 23.3435 48.3159 21.5392 48.3159 19.4236C48.3159 17.308 46.9581 16.045 44.8606 16.4509L38.4055 17.7095ZM49.7323 35.0852C49.7323 32.7937 48.2617 31.4315 45.9928 31.8735L38.4055 33.3486V41.229L45.9928 39.754C48.2617 39.3164 49.7323 37.3813 49.7323 35.0852Z" fill="#4D2C5E"/>
         </svg>
-<div class="Footer text">
-    <p>
-        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy a type specimen book.
-    </p>
-</div>
-
+<div class="Footer_text">
+    <p>Lorem Ipsum is simply dummy text of</p>
+    <p>the printing and typesetting industry.</p> 
+    <p>Lorem Ipsum has been the industry's</p>
+    <p>standard dummy a type specimen book.</p>
+</div class ="side_text_footer">
+<h2>Company</h2>
+<p>About us</p>
+<p>How to work ?</p>
+<p>Popular Cousrses</p>
+<p>Services</p>
 
 </div>
 </Footer>
